[package]
name = "message-format"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
icu = { version = "2.1.1", features = ["datagen"] }
icu_decimal = "2.1.1"
ordered-float = "5.1.0"
displaydoc = "0.2"
regex = "1.10.4"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
